--- a/src/app/component/stack/stack.component.html
+++ b/src/app/component/stack/stack.component.html
@@ -1,17 +1,18 @@
 <div class="col-md-4 col-md-offset-4">
     <div class="" [hidden]="sub">
-        <form (ngSubmit)=onFormSubmit() #userForm="ngForm">
+        <form (ngSubmit)=onFormSubmit() #userForm="ngForm" minlength="4">
         <div class="form-group">
           <span class="label label-default">name</span>
           <input type="text" class="form-control"  [(ngModel)]="user.name" #name="ngModel" name="name" required>
-          <span class="btn btn-danger">username required</span>
+          <div *ngIf="name.invalid || name.pristine">user name required</div>
         </div>
         <div class="form-group">
-          <label for="">location</label>
+          <label class="label label-default">location</label>
           <input type="text" class="form-control" [(ngModel)]="user.location" #location="ngModel" name="location" required>
+          <div *ngIf="location.invalid || location.pristine">location name required</div>          
         </div>
         <div class="form-group">
-            <label for="">type</label>
+            <label class="label label-info">type</label>
             <input type="text" name="type" class="form-control" [(ngModel)]="user.type" #type="ngModel"  required >
          </div>
         <button type="submit" class="btn btn-primary" (click)=onClick()>Submit</button>
